objects/Shipment__c.object
<CustomObject>
    <description>Custom Object -  Represents a discreet shipment of physical items from an order/opportunity. Used by Retail and CG</description>
    <fields>
        <fullName>Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Carrier</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments as Carrier</relationshipLabel>
        <relationshipName>Shipmentsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <inlineHelpText>Indicates the end customer on this shipment.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipments_As_Customerab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Delivery__c</fullName>
        <description>Retail IDO Custom Field</description>
        <inlineHelpText>Current estimate of delivery date for this shipment.</inlineHelpText>
        <label>Estimated Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Include_All_Order_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to include all products listed on this order/opportunity in the shipment.</description>
        <inlineHelpText>Check this box to include all products listed on this order/opportunity in the shipment.</inlineHelpText>
        <label>Include All Order Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipmentsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Purchase</label>
        <referenceTo>Purchases__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipmentsab</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RMA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RMA</label>
        <referenceTo>RMA__c</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipmentsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Retail IDO Custom Field</description>
        <inlineHelpText>Date when the items on this shipment were arranged or given to the shipper.</inlineHelpText>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Ship_To__r.MailingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Ship_To__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Ship_To__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Ship_To__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To Zip/Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State__c</fullName>
        <description>Retail IDO Custom Field</description>
        <formula>Ship_To__r.MailingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship-To State/Province</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Retail IDO Custom Field</description>
        <label>Ship To</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipments</relationshipLabel>
        <relationshipName>Shipmentsab</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipping_Notes__c</fullName>
        <description>Retail IDO Custom Field</description>
        <inlineHelpText>Notes on shipping, including details on status and notes for the customer to see.</inlineHelpText>
        <label>Shipping Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Retail IDO Custom Field</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Transmitted to Shipper</fullName>
                </value>
                <value>
                    <fullName>Shipped</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tracking__c</fullName>
        <description>Retail IDO Custom Field</description>
        <inlineHelpText>Carrier tracking number for a shipment.</inlineHelpText>
        <label>Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UCIN_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Cloud Explorer External ID field used to track IDs between systems.</description>
        <externalId>true</externalId>
        <label>UCIN External ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Shipment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SH-{00000}</displayFormat>
        <label>Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>